plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.cinema'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Spring Milestone Repository (Spring Boot 4.x)
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {

    /* ===============================
     * Spring Boot Starters
     * =============================== */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    /* ===============================
     * API 문서 (OpenAPI 3 / Swagger) — Spring Boot 4.x 공식 호환
     * =============================== */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'

    // AOP - Spring AOP + AspectJ
    implementation 'org.springframework:spring-aop'
    implementation 'org.aspectj:aspectjweaver'

    /* ===============================
     * Development Tools
     * =============================== */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    /* ===============================
     * JSON - Gson (Jackson 대신 사용)
     * =============================== */
    implementation 'com.google.code.gson:gson'

    /* ===============================
     * QueryDSL (JPA + Jakarta)
     * =============================== */
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    /* ===============================
     * Database (Runtime)
     * =============================== */
    runtimeOnly 'com.mysql:mysql-connector-j'  // 운영 환경 (MySQL)
    implementation 'com.h2database:h2'         // 개발 환경 (H2) - H2 Console 사용을 위해 implementation

    /* ===============================
     * Redis - Redisson (분산 락)
     * Spring Boot 4와 redisson-spring-boot-starter 호환 이슈로
     * 코어 라이브러리만 사용. RedissonConfig에서 RedissonClient 빈 수동 등록.
     * redisson-spring-boot-starter 는 RedisAutoConfiguration 등을 참조해
     * Spring Boot 4에서 ClassNotFoundException 을 일으키므로 사용하지 않음.
     * =============================== */
    implementation 'org.redisson:redisson:3.40.2'

    /* ===============================
     * Lombok
     * =============================== */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    /* ===============================
     * Maps API (Google / Naver)
     * - Google: 공식 Java 클라이언트 (Geocoding, Directions, Places 등)
     * - Naver: REST API 호출용 — spring-boot-starter-web(WebClient) 사용
     * =============================== */
    implementation 'com.google.maps:google-maps-services:2.2.0'

    /* ===============================
     * JWT (jjwt 0.12.x)
     * =============================== */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.12.6'

    /* ===============================
     * Test
     * =============================== */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:testcontainers:1.20.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'integration'
    }
    finalizedBy tasks.named('jacocoTestReport')
}

// 통합 테스트 (Docker 필요): ./gradlew integrationTest
tasks.register('integrationTest', Test) {
    group = 'verification'
    description = 'Runs integration tests (requires Docker for Testcontainers)'
    useJUnitPlatform {
        includeTags 'integration'
    }
    shouldRunAfter test
}

jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/config/**',
                '**/dto/**',
                '**/entity/**',
                '**/*Application*'
            ])
        }))
    }
}

// bootRun 시 한글 로그 깨짐 방지 (Windows 터미널 등)
// 애플리케이션 JVM에 UTF-8 인코딩 적용
tasks.named('bootRun') {
    jvmArgs = [
        '-Dfile.encoding=UTF-8',
        '-Dstdout.encoding=UTF-8',
        '-Dstderr.encoding=UTF-8',
    ]
}

/* ===============================
 * QueryDSL Q클래스 생성 디렉토리
 * =============================== */
def querydslDir = layout.buildDirectory.dir("generated/querydsl")

sourceSets {
    main {
        java {
            srcDirs += querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir.get().asFile)
    // Spring MVC가 @RequestParam, @PathVariable 등에서 파라미터 이름을 리플렉션으로 읽을 수 있도록 함
    options.compilerArgs.add('-parameters')
}

clean {
    delete querydslDir
}
